Fixed bug in Firefox of board menu not being visible

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -53,7 +53,7 @@ body {
 #currentBoard {
     display: inline-block;
     width: 75%;
-    margin-left: 45vh;
+    /* margin-left: 45vh; */
 }
 
 #boardButtons {
@@ -63,7 +63,8 @@ body {
     background-color: gray;
     border-radius: 5px;
     min-height: 100vh;
-    position: fixed;
+    margin-top: -10%;
+    /* position: fixed; */
 }
 
  /***********
